2008-06-26  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-module-config.c: Make sure we set
	the separator as the right thing when building the path here.

2008-06-26  Martyn Russell  <martyn@imendio.com>

	* configure.ac:
	* data/Makefile.am:
	* data/modules/Makefile.am:
	* data/modules/applications.xml:
	* data/modules/files.xml:
	* data/modules/gaim-conversations.xml: Added these module files
	which should get read on startup.
	
	* src/libtracker-common/Makefile.am:
	* src/libtracker-common/tracker-module-config.[ch]: Added this
	module to load the .xml files which get installed into
	$prefix/share/tracker.
	
	* src/libtracker-common/tracker-type-utils.[ch]: Added
	tracker_gslist_to_string_list().
	
	* src/trackerd/tracker-crawler.[ch]: 
	* src/trackerd/tracker-main.c: 
	* src/trackerd/tracker-process.[ch]: Use the new module config
	code when initialising the process module.

2008-06-26  Ivan Frade  <ivan.frade@nokia.com>
	
	* tests/libtracker-db/run-test-in-tmp-dir.sh
	* tests/libtracker-db/tracker-db-manager-test-attach.c:
	Added more tests.
	
2008-06-26  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-process.c:
	* src/trackerd/tracker-process.h: Remove all functions in
	tracker-process and clean up any place that depends on functions
	from there currently.

2008-06-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-query-tree.c: Replaced a g_value_get_pointer
	with a g_value_get_object. It seems that the indexer instance is
	nowadays a GObject rather than a arbritary pointer.

2008-06-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Giving out correct ifaces
	with correct attachments for service-specific database connections

2008-06-26  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-db.c: 